test/sema/typeck/pattern/bindings-not-in-all-alternatives.out
error: binding `_y` not defined in all bindings
--> bindings-not-in-all-alternatives.dora:4:31
 | fn f(x: Foo): Int64 {
 |     match x {
 |         Foo::A(x) | Foo::B(x, _y) => x,
                                 ~~
 |         Foo::C => 1
 |     }
1 error found.
