test/sema/typeck/pattern/bindings-not-in-all-alternatives.dora
enum Foo { A(Int64), B(Int64, Float32), C }
fn f(x: Foo): Int64 {
    match x {
        Foo::A(x) | Foo::B(x, _y) => x,
        Foo::C => 1
    }
}
